--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ qsub-output/
 *.xml
 *.pdf
 *.pkl
+/bhatta-bound-a0.8-s0-d0.1.eps
+/bhatta-bound-a0.8-s1-d0.5.eps
+/bhatta-bound-a0.8-s0-d0.5.eps
+/bhatta-bound-a0.8-s1-d0.1.eps
+/bhatta_bound.eps
